# full_cycle_djangoraext

./: .gitignore  .python-version  Pipfile  compose.yaml
admin/: Dockerfile
admin/core/: rabbitmq.py  services.py
admin/core/management/commands/: consumer_register_processed_video_path.py
admin/core/migrations/: 0001_initial.py
admin/videos/: settings.py
core/: admin.py  form.py  models.py  services.py
core/migrations/: 0003_alter_video_thumbnail.py
core/static/js/: upload_video.js
core/templates/admin/core/: upload_video.html
django/: Dockerfile  Pipfile  pyproject.toml
django/core/: admin.py  apps.py  form.py  models.py  rabbitmq.py  services.py
django/core/management/commands/: consumer_upload_chunks_to_external_storage.py
django/core/migrations/: 0002_remove_video_author.py  0004_video_author.py
django/core/templates/admin/core/: upload_video.html
django/videos/: .env-example  asgi.py  settings.py
golang/: Dockerfile  db.sql  go.mod  go.sum
golang/cmd/tools/migrations/: main.go
golang/cmd/videoconverter/: main.go
golang/internal/converter/: idempotency.go  task.go
golang/internal/rabbitmq/: rabbitmq.go
golang/internal/utils/: utils.go
videos/: .env-example  settings.py  urls.py
