[project]
name = "admin"
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "django>=5.2.1",
    "django-environ>=0.12.0",
    "kombu>=5.5.3",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "django-types",
    "django-stubs",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
